--- a/index.html
+++ b/index.html
@@ -25,6 +25,28 @@
     <p v-for="m in info">{{m.text}}</p>
 </div>
 
+<div class="box" id="numb1">
+    <input type="text" v-model="number">
+    {{number+1}}
+    <div>
+        {{'ok'?"liu":"xia"}}
+    </div>
+    <div>
+        <a v-bind:href="url">baidu</a>
+    </div>
+</div>
+
+
+<div class="box" id="kess">
+    <div>
+        <a :href="url">必应</a>
+    </div>
+    <div>
+        <button @click="dosth">do</button>
+    </div>
+</div>
+
+
 <script src="node_modules/vue/dist/vue.min.js"></script>
 <script src="js/demo.js"></script>
 </body>
