--- a/index.html
+++ b/index.html
@@ -47,6 +47,21 @@
 </div>
 
 
+<div class="box" id="computed_1">
+    <div class="pad10">
+        normal info is:{{info}}
+    </div>
+    <div class="pad10">
+        computed info is:{{reverInfo}}
+    </div>
+    <div class="pad10">
+        computed date is:{{now1}}
+    </div>
+    <div class="pad10">
+        methods date is :{{now2()}}
+    </div>
+</div>
+
 <script src="node_modules/vue/dist/vue.min.js"></script>
 <script src="js/demo.js"></script>
 </body>
