--- a/componet.html
+++ b/componet.html
@@ -24,6 +24,16 @@
     </p>
 </div>
 
+
+<div class="box" id="comp2">
+    {{fullname}} <p>{{mineInfo}}</p>
+</div>
+
+
+<div class="box" id="style1">
+    <div  :style="{color:activeColor,fontSize:fsize+'px'}">士大夫士大夫撒旦飞洒</div>
+</div>
+
 <script src="node_modules/vue/dist/vue.js"></script>
 <script src="js/componet.js"></script>
 </body>
