--- a/condition.html
+++ b/condition.html
@@ -52,6 +52,9 @@
     </div>
     <div v-for="n in 12">{{n}}</div>
 </div>
+<div class="box" id="test6">
+
+</div>
 
 
 <script src="node_modules/vue/dist/vue.min.js"></script>
