--- a/condition.html
+++ b/condition.html
@@ -56,6 +56,8 @@
 
 </div>
 
+<div class="box" id="test7"></div>
+
 
 <script src="node_modules/vue/dist/vue.min.js"></script>
 <script src="js/condition.js"></script>
